# translate_paper_with_LLM

./: main.py  pyproject.toml  temp.html  translation_prompt.yaml
data/: llama-1.txt  llama-2.txt  llama-3.txt  llama-4.txt  llama-5txt  llama-번역.txt  llama.txt
final_translated/: Lora.md
final_translated/Lora/images/: page10_table1.csv  page11_table2.csv  page12_table1.csv  page12_table2.csv  page13_table1.csv  page15_table1.csv  page17_table2.csv  page18_table1.csv  page19_table2.csv  page1_table1.csv  page1_table2.csv  page21_table1.csv  page21_table3.csv  page22_table2.csv  page23_table1.csv  page24_table1.csv  page25_table1.csv  page26_table1.csv  page26_table2.csv  page2_table2.csv  page5_table1.csv  page6_table1.csv  page8_table2.csv  page9_table1.csv
temp_translated/Lora/: 1.md  10.md  11.md  12.md  13.md  14.md  15.md  16.md  17.md  18.md  19.md  2.md  20.md  21.md  22.md  23.md  24.md  25.md  26.md  3.md  4.md  5.md  6.md  7.md  8.md  9.md
temp_translated/Lora/images/: page11_table1.csv  page14_table1.csv  page16_table1.csv  page17_table1.csv  page19_table1.csv  page20_table1.csv  page20_table2.csv  page20_table3.csv  page21_table2.csv  page22_table1.csv  page25_table2.csv  page2_table1.csv  page3_table1.csv  page4_table1.csv  page7_table1.csv  page7_table2.csv  page8_table1.csv
