[tool.poetry]
name = "voice-to-sql"
version = "0.1.0"
description = ""
authors = ["Tmax <yunsung_song@tmax.co.kr>"]
readme = "README.md"
packages = [{ include = "graph" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
beautifulsoup4 = "^4.12.3"
#chromadb = "^0.5.0"
tavily-python = "^0.3.3"
python-dotenv = "^1.0.1"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"
langgraph-cli = "^0.1.35"
tiktoken = "^0.7.0"
langchain-openai = "^0.1.12"
pypdf = "^4.3.1"
faiss-cpu = "^1.8.0.post1"
langchain-chroma = "^0.1.2"
langchain = "^0.2.12"
langgraph = "0.2.18"
langgraph-checkpoint-sqlite = "^1.0.0"
langchain-community = "^0.2.11"
langchainhub = "^0.1.20"
langchain_upstage = "^0.1.7"
langchain-pinecone = "^0.1.3"
#pinecone-client = "^4.1.2"
#pinecone-plugin-interface = "^0.0.7"
#pinecone-text = "^0.9.0"
mysql-connector-python = "^9.0.0"

langchain-teddynote = "^0.0"
#huggingface-hub = "^0.23"
deepl = "^1.17.0"
kiwipiepy = "^0.17.1"
konlpy = "^0.6.0"
JPype1 = "^1.5.0"

# 데이터 처리 및 분석 관련 패키지
pandas = "^2.2.2"
rank-bm25 = "^0.2.2"

# 데이터베이스 및 캐시 관련 패키지
#redis = "^5.0.3"

# PDF 및 파일 처리 관련 패키지
pymupdf = "^1.24.1"
pdfplumber = "^0.11.1"
pdfminer-six = "^20231228"
pymupdf4llm = "^0.0"

# 시각화 및 사용자 인터페이스 관련 패키지
matplotlib = "^3.8.4"
#streamlit = "^1.32.2"
jupyter = "^1.0.0"
notebook = "^7.1.2"

# 딥러닝 및 머신러닝 관련 패키지
#torch = "^2.2.2"
#torchvision = "^0.17.2"
#open-clip-torch = "^2.24.0"
nltk = "3.8.1"
grpcio = "^1.65.4"
fastapi = "^0.112.1"
python-multipart = "^0.0.9"
uvicorn = "^0.30.6"
langchain-experimental = "^0.0.64"
tabulate = "^0.9.0"
pinecone-client = "^5.0.1"
pinecone-plugin-interface = "^0.0.7"
pinecone-text = "^0.9.0"
async-asgi-testclient = "^1.4.11"
pytest-asyncio = "^0.24.0"
pillow = "^10.4.0"
pypdf2 = "==2.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
